@@ -47,7 +47,7 @@ command line options
 A list of all devpi-server options::
 
     $ devpi-server -h
-    usage: devpi-server [-h] [--version] [--datadir DIR] [--port PORT]
+    usage: devpi-server [-h] [--version] [--serverdir DIR] [--port PORT]
                         [--host HOST] [--refresh SECS] [--gendeploy DIR]
                         [--secretfile path] [--bottleserver TYPE] [--debug]
     
@@ -62,7 +62,7 @@ A list of all devpi-server options::
       main options
     
       --version            show devpi_version (0.9.dev8)
-      --datadir DIR        directory for server data [~/.devpi/server]
+      --serverdir DIR        directory for server data [~/.devpi/server]
       --port PORT          port to listen for http requests [3141]
       --host HOST          domain/ip address to listen on [localhost]
       --refresh SECS       interval for consulting changelog api of
